--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>TerrorFlix</title>
 </head>
 <body>
-    <header>Terrorlix<header>
+    <header>TerrorFlix<header>
         <h1>Sorria você e o proximo</h1>
         <p>#Terror</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/n-fCcsL-Qgc?si=6OVPFVrcHhKK7_pM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
